--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>Phaser 3 flipX Issue</title>
-    <script src="/lib/phaser.js"></script>
+    <script src="lib/phaser.js"></script>
     <style type="text/css">
         body {
             margin: 0;
