--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
 <!doctype html> 
 <html lang="en"> 
-<head> 
-    <meta charset="UTF-8" />
-    <title>Phaser 3 flipX Issue</title>
-    <script src="lib/phaser.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
-</head>
-<body>
+	<head> 
+		<meta charset="UTF-8" />
+		<title>Phaser 3 flipX Issue</title>
+		<script src="lib/phaser.js"></script>
+		<style type="text/css">
+body {
+	margin: 0;
+}
+		</style>
+	</head>
+	<body>
 
-<script type="text/javascript">
+		<script type="text/javascript">
 
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        scene: {
-            preload: preload,
-            create: create,
-            update: update
-        }
-    };
+			var config = {
+				type: Phaser.AUTO,
+				width: 800,
+				height: 600,
+				scene: {
+					preload: preload,
+					create: create,
+					update: update
+				}
+			};
 
-    var game = new Phaser.Game(config);
+var game = new Phaser.Game(config);
+var example1;
+var example2;
 
-    function preload ()
-    {
-    }
+function preload ()
+{
+	this.load.atlas('atlas', 'assets/atlas.png', 'assets/atlas.json');
+}
 
-    function create ()
-    {
-    }
+function create ()
+{
+	this.anims.create({ key: 'animation', frames: this.anims.generateFrameNames('atlas', { prefix: 'example', end: 5}), repeat: -1 });
 
-    function update ()
-    {
-    }
+	example1 = this.add.sprite(this.cameras.main.width * .25, this.cameras.main.height * .5, 'atlas' 'example0').play('animation');
+}
 
-</script>
+function update ()
+{
+}
 
-</body>
+		</script>
+
+	</body>
 </html>
