--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ function update ()
 function onEvent()
 {
 	if (example1.scaleX === 1) {
-		example.setScale(-1, 1);
+		example1.setScale(-1, 1);
 	} else {
-		example.setScale(1, 1);
+		example1.setScale(1, 1);
 	}
 
 	if (example2.flipX === false) {
