--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ function preload ()
 
 function create ()
 {
+	this.add.image(this.cameras.main.with /2, this.cameras.main.height /2, 'atlas', 'bg');
+
 	this.anims.create({ key: 'animation', frames: this.anims.generateFrameNames('atlas', { prefix: 'example', end: 5}), repeat: -1, frameRate: 12 });
 
 	example1 = this.add.sprite(this.cameras.main.width * .25, this.cameras.main.height * .5, 'atlas', 'example0').play('animation');
