--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@ function create ()
 
 	example1 = this.add.sprite(this.cameras.main.width * .25, this.cameras.main.height * .5, 'atlas', 'example0').play('animation');
 	text1 = this.add.text(this.cameras.main.width * .25, this.cameras.main.height * .5 - 36, 'Scale = 1', { fontFamily: 'Arial', fontSize: 32, color: '#ebdbb2' });
+	text1.setOrigin(.5);
 
 	example2 = this.add.sprite(this.cameras.main.width * .75, this.cameras.main.height * .5, 'atlas', 'example0').play('animation');
 	text2 = this.add.text(this.cameras.main.width * .75, this.cameras.main.height * .5 - 36, 'flipX: false', { fontFamily: 'Arial', fontSize: 32, color: '#ebdbb2' });
+	text2.setOrigin(.5);
 
 	this.time.addEvent({ delay: 5000, callback: onEvent, callbackScope: this, loop: true });
 }
