--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function create ()
 	example1 = this.add.sprite(this.cameras.main.width * .25, this.cameras.main.height * .5, 'atlas', 'example0').play('animation');
 	text1 = this.add.text(this.cameras.main.width * .25, this.cameras.main.height * .5 - 80, 'Scale = 1', { fontFamily: 'Arial', fontSize: 48, color: '#ebdbb2' });
 	text1.setOrigin(.5);
-	text1.setShadow(1, 1, #928374, 1, false, true);
+	text1.setShadow(1, 1, 0x928374, 1, false, true);
 
 	example2 = this.add.sprite(this.cameras.main.width * .75, this.cameras.main.height * .5, 'atlas', 'example0').play('animation');
 	text2 = this.add.text(this.cameras.main.width * .75, this.cameras.main.height * .5 - 80, 'flipX: false', { fontFamily: 'Arial', fontSize: 48, color: '#ebdbb2' });
